--- a/Project_1/Python_Implementation_and_Visualisation.ipynb
+++ b/Project_1/Python_Implementation_and_Visualisation.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9008f979",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import time"
+    "import times"
    ]
   },
   {
