--- a/Project_1/Python_Implementation_and_Visualisation.ipynb
+++ b/Project_1/Python_Implementation_and_Visualisation.ipynb
@@ -203,7 +203,7 @@
     "\n",
     "### Worst Case:\n",
     "$$\n",
-    "\\frac{(2^h - 1) 2^h}{2} \\times 2^{k-h} = 2^{h+k-1} + 2^{k-1}\n",
+    "\\frac{(2^h - 1) 2^h}{2} \\times 2^{k-h} = 2^{h+k-1} - 2^{k-1}\n",
     "$$\n",
     "\n",
     "### Average Case\n",
@@ -227,8 +227,8 @@
     "## Total Complexity:\n",
     "\n",
     "$$\n",
-    "(k-h) 2^k - (2^{k-h} -1) + 2^{h+k+1} + 2^{k-1}\n",
-    "= n( \\log n - \\log S) - \\frac{n}{S} -1 + 2nS + \\frac{n}{2}\n",
+    "(k-h) 2^k - (2^{k-h} -1) + 2^{h+k-1} - 2^{k-1}\n",
+    "= n( \\log n - \\log S) - \\frac{n}{S} -1 + \\frac{nS}{2} + \\frac{n}{2}\n",
     "$$\n",
     "\n",
     "### Final Equation:\n",
@@ -1135,9 +1135,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1149,7 +1149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
