add project 2 code

--- a/Project_1/Python_Implementation_and_Visualisation.ipynb
+++ b/Project_1/Python_Implementation_and_Visualisation.ipynb
@@ -228,13 +228,13 @@
     "\n",
     "$$\n",
     "(k-h) 2^k - (2^{k-h} -1) + 2^{h+k-1} - 2^{k-1}\n",
-    "= n( \\log n - \\log S) - \\frac{n}{S} -1 + \\frac{nS}{2} + \\frac{n}{2}\n",
+    "= n( \\log n - \\log S) - \\frac{n}{S} -1 + \\frac{nS}{2} - \\frac{n}{2}\n",
     "$$\n",
     "\n",
     "### Final Equation:\n",
     "\n",
     "$$\n",
-    "n \\log n - n \\log S + 2nS + \\frac{n}{2} - \\frac{n}{S} +1\n",
+    "n \\log n - n \\log S + \\frac {nS}{2} - \\frac{n}{2} - \\frac{n}{S} +1\n",
     "$$\n",
     "\n",
     "$$\n",
